--- a/styles/style.css
+++ b/styles/style.css
@@ -176,7 +176,7 @@ div.field#field-search {margin-top: 0px;}
     max-width: 100%;
     scroll-snap-type: x mandatory;
     white-space: nowrap;
-    padding: 100px 0 0 0;
+    padding: 70px 0 0 0;
   }
   .scrollsnap-carousel .slide {
     display: inline-block;
@@ -258,7 +258,7 @@ div.field#field-search {margin-top: 0px;}
   }
   
 
-#profile div.movie {display: inline-block; width: 100%; height: 100%; padding: 2%; box-shadow: 0px 0px 15px var(--primary); margin: 0 ; padding-top: 5%; background-color: #0f0f0f; border-radius: 8px; text-align: center; transition: transform 0.2s ease; white-space: wrap;}
+#profile div.movie {cursor: grab; display: inline-block; width: 100%; height: 100%; padding: 2%; box-shadow: 0px 0px 15px var(--primary); margin: 0 ; padding-top: 5%; background-color: #0f0f0f; border-radius: 8px; text-align: center; transition: transform 0.2s ease; white-space: wrap;}
 #profile div.movie div.movie-img {width: 100%; height: 120px; overflow: hidden; border-radius: 8px; margin-bottom: 5%; cursor: pointer; display: flex; align-items: center;}
 #profile div.movie div.movie-img img {width: 100%; height: 100%; object-fit: cover; object-fit: contain;}
 #profile div.movie div.title {font-size: 12px; color: white; text-align: center; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;}
@@ -281,3 +281,110 @@ div.field#field-search {margin-top: 0px;}
     transition: ease-in 0.2s all;
     padding: 0 5%;
 }
+
+#profile .movie.dragging {
+    opacity: 0.5;
+    transform: scale(1.05);
+    cursor: grabbing;
+}
+
+/* Default hidden state */
+.h1, .section-description {
+    opacity: 0;
+    transform: translateY(-100px); /* From top */
+    transition: transform 0.5s ease, opacity 0.5s ease;
+  }
+  
+  .section-description {
+    transform: translateX(100px); /* From right */
+  }
+  
+  /* Active state */
+  .animate-active {
+    opacity: 1;
+    transform: translateY(0); /* Reset */
+  }
+  
+  .section-description.animate-active {
+    transform: translateX(0); /* Reset */
+  }
+  
+
+/* Movie animation */
+
+  @property --rotate {
+    syntax: "<angle>";
+    initial-value: 132deg;
+    inherits: false;
+  }
+  
+  :root {
+    --card-height: 65vh;
+    --card-width: calc(var(--card-height) / 1.5);
+  }
+  
+  .movie {
+    background: #191c29;
+    width: var(--card-width);
+    height: var(--card-height);
+    padding: 0px;
+    position: relative;
+    border-radius: 6px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    color: rgb(88 199 250 / 0%);
+    cursor: pointer;
+    font-family: cursive;
+  }
+  
+  
+  .movie::before {
+    content: "";
+    width: 104%;
+    height: 102%;
+    border-radius: 8px;
+    background-image: linear-gradient(
+      var(--rotate)
+      , #ff5d5d, #e33c3c 43%, #c20003);
+      position: absolute;
+      z-index: -1;
+      top: -1%;
+      left: -2%;
+      animation: spin 2.5s linear infinite;
+  }
+  
+  .movie::after {
+    position: absolute;
+    content: "";
+    top: calc(var(--card-height) / 20);
+    left: 0;
+    right: 0;
+    z-index: -1;
+    height: 100%;
+    width: 100%;
+    margin: 0 auto;
+    transform: scale(0.7);
+    filter: blur(calc(var(--card-height) / 10));
+    background-image: linear-gradient(
+      var(--rotate)
+      , #ff5d5d, #e33c3c 43%, #c20003);
+      opacity: 1;
+    transition: opacity .5s;
+    animation: spin 2.5s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% {
+      --rotate: 0deg;
+    }
+    100% {
+      --rotate: 360deg;
+    }
+  }
+
+
+
+
+  
