--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,10 @@
-body { --primary: #E50914; --secondary: #FF5A4A; padding: 0px; margin: 0px; background-color: black; color: white}
+html, body {
+    height: auto;}
+body {--primary: #E50914; --secondary: #FF5A4A; padding: 0px; margin: 0px; background-color: blue; color: white; position: relative}
 * {font-family: 'Roboto', sans-serif; box-sizing: border-box;}
 div.scrollsnap-carousel::-webkit-scrollbar {height: 10px;}
 div.scrollsnap-carousel::-webkit-scrollbar-track {background: #333;}
-div.scrollsnap-carousel::-webkit-scrollbar-thumb {background: var(--primary)}
+div.scrollsnap-carousel::-webkit-scrollbar-thumb {background: var(--primary);}
 div.scrollsnap-carousel::-webkit-scrollbar-thumb:hover {background: var(--secondary);}
 button {  
     -webkit-font-smoothing: antialiased;
@@ -25,11 +27,14 @@ button:hover {background: var(--primary); color: white;}
 nav {background-color: #333; color: white; padding: 10px; display: flex; justify-content: space-evenly;}
 nav a {color: white; margin: 0 10px; text-decoration: none;}
 nav a:hover {text-decoration: underline;}
-main {padding: 0px; margin: 0px 50px; max-height: calc(100vh - 79px);}
-.swiper-container {overflow: hidden; width: 100%; height: 100%; padding: 0px; margin: 0px; gap: 10px;}
+main {padding: 0px; margin: 30px 50px 0px 50px; position: relative; }
+.swiper-container {position: relative; overflow: hidden; width: 100%; height: 100%; padding: 0px; margin: 0px; gap: 10px; background-color: black;}
 .swiper-wrapper {height: 100%; padding: 0px; margin: 0px;}
 .swiper-slide {overflow:hidden; min-height: calc(100vh - 87px); margin: 0px;}
 .swiper-container .swiper-button-next, .swiper-container .swiper-button-prev {color: white;}
+.swiper-container .swiper-button-next, .swiper-container .swiper-button-prev {position: absolute; top: 49px; z-index: 10;}
+.swiper-container .swiper-button-next {right: 30px;}
+.swiper-container .swiper-button-prev {left: 30px;}
 .swiper-container .swiper-pagination-bullet {background-color: white;}
 
 section {padding: 20px; height: 100%;}
@@ -384,7 +389,21 @@ div.field#field-search {margin-top: 0px;}
     }
   }
 
-
-
+  
+/* Background animation */
+body::before, body::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(
+      var(--rotate),
+      #ff5d5d, #e33c3c 43%, #c20003
+    );
+    animation: spin 2.5s linear infinite;
+    z-index: -1; /* Keep it behind the content */
+  }
 
   
